# coinbaseparse

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/crypto/: dao.py  models.py  router.py  scheduler.py  schemas.py
app/crypto/services/: CryptoDataController.py  CryptoQueryService.py
app/migration/: env.py
app/migration/versions/: 8edce5e18f9b_изменено_поле_dynamic_на_true.py  f53da71ee099_create_crypto_tables.py
test/: conftest.py  test_router.py
